--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 click==8.1.7
 fastapi==0.114.2
+fastapi-pagination==0.12.27
 greenlet==3.1.0
 h11==0.14.0
 idna==3.10
